Frankbelford/uatv1ba/force-app/main/default/objects/IP_Parallel_Payroll_Check__c/IP_Parallel_Payroll_Check__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Parallel Payroll Check</label>
</CustomObject>