Frankbelford/uatv1ba/force-app/main/default/objects/IP_Parallel_Payroll_Check__c/fields/Run_Parallel_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Run_Parallel_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Parallel Payroll</label>
    <type>Checkbox</type>
</CustomField>