Frankbelford/uatv1ba/force-app/main/default/objects/IP_Parallel_Payroll_Check__c/fields/TestingCheckbox__c.field-meta.xml
<CustomField>
    <fullName>TestingCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestingCheckbox</label>
    <type>Checkbox</type>
</CustomField>