Frankbelford/uatv1ba/force-app/main/default/objects/IP_Parallel_Payroll_Check__c/fields/TimeLineIds__c.field-meta.xml
<CustomField>
    <fullName>TimeLineIds__c</fullName>
    <label>TimeLineIds</label>
    <length>200</length>
    <type>Text</type>
</CustomField>